--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,7 @@
     "sourceMap": true
   },
   "files": [
-    "" ]
+    "005_typescript_config.ts",
+    "006_variables.ts",
+    "008_type_alias.ts"  ]
 }
