--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,6 @@
   "files": [
     "005_typescript_config.ts",
     "006_variables.ts",
-    "008_type_alias.ts"  ]
+    "008_type_alias.ts",
+    "009_union_types.ts"  ]
 }
